--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-28 20:57+0000\n"
+"POT-Creation-Date: 2020-10-29 15:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4674,15 +4674,7 @@ msgstr ""
 msgid "Verify Token"
 msgstr ""
 
-msgid ""
-"\n"
-"      It may take up to ten minutes for a new webhook to take effect after being set on your Facebook application. Remember,\n"
-"      until your Facebook application is approved by Facebook you will only be able to send and receive messages\n"
-"      with administrators of your application.\n"
-"\n"
-"\n"
-"\n"
-"    "
+msgid "It may take up to ten minutes for a new webhook to take effect after being set on your Facebook application. Remember, until your Facebook application is approved by Facebook you will only be able to send and receive messages with administrators of your application."
 msgstr ""
 
 msgid "You can connect your Facebook page's Messenger account, click below to get started."
@@ -4744,193 +4736,88 @@ msgstr ""
 msgid "With the approval from Globe Labs you will receive the passphrase to use below."
 msgstr ""
 
-msgid ""
-"\n"
-"    You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password\n"
-"    here.\n"
-"\n"
-"  "
+msgid "You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password here."
 msgstr ""
 
 #, python-format
-msgid ""
-"\n"
-"      After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want\n"
-"      to push a message to %(brand)s.\n"
-"\n"
-"    "
+msgid "After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want to push a message to %(brand)s."
 msgstr ""
 
 #, python-format
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://jiochat.com\">JioChat Channel</a> to your %(name)s workspace\n"
-"    to automate sending and receiving JioChat messages.\n"
-"  "
+msgid "You can connect a <a href=\"https://jiochat.com\">JioChat Channel</a> to your %(name)s workspace to automate sending and receiving JioChat messages."
 msgstr ""
 
-msgid ""
-"\n"
-"      To start copy the App ID and App Secret from the Developer Center into the form below and click Submit.\n"
-"    "
+msgid "To start copy the App ID and App Secret from the Developer Center into the form below and click Submit."
 msgstr ""
 
-msgid ""
-"\n"
-"    After entering your endpoint URL below, we'll provide you with the configuration details for your Kannel configuration file.\n"
-"  "
+msgid "After entering your endpoint URL below, we'll provide you with the configuration details for your Kannel configuration file."
 msgstr ""
 
-msgid ""
-"\n"
-"    As a last step you'll need to configure Kannel to send and receive messages. Here is a stanza you\n"
-"    can add to your Kannel configuration to enable sending and receiving.\n"
-"\n"
-"  "
+msgid "As a last step you'll need to configure Kannel to send and receive messages. Here is a stanza you can add to your Kannel configuration to enable sending and receiving."
 msgstr ""
 
 msgid "Make sure to change the forced-smsc and default-smsc values to the appropriate values for your configuration."
 msgstr ""
 
 #, python-format
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://developers.line.me/messaging-api/overview\">LINE Bot</a> to your %(name)s workspace\n"
-"    to automate sending and receiving LINE messages.\n"
-"  "
+msgid "You can connect a <a href=\"https://developers.line.me/messaging-api/overview\">LINE Bot</a> to your %(name)s workspace to automate sending and receiving LINE messages."
 msgstr ""
 
-msgid ""
-"\n"
-"    To start creating a LINE bot, go to <a href=\"https://developers.line.me/messaging-api/getting-started\">Getting started with the Messaging API</a>.\n"
-"\n"
-"  "
+msgid "To start creating a LINE bot, go to <a href=\"https://developers.line.me/messaging-api/getting-started\">Getting started with the Messaging API</a>."
 msgstr ""
 
-msgid ""
-"\n"
-"        Access the <a href=\"https://developers.line.me/channels/\">LINE Channels</a> page and add a new Channel.</li>\n"
-"\n"
-"      "
+msgid "Access the <a href=\"https://developers.line.me/channels/\">LINE Channels</a> page and add a new Channel.</li>"
 msgstr ""
 
-msgid ""
-"\n"
-"        Create a Line account using the application on your smartphone\n"
-"\n"
-"      "
+msgid "Create a Line account using the application on your smartphone"
 msgstr ""
 
-msgid ""
-"\n"
-"        Activate the permission to login via web application in the \"Settings > Account > Allow login\"\n"
-"\n"
-"      "
+msgid "Activate the permission to login via web application in the \"Settings > Account > Allow login\""
 msgstr ""
 
-msgid ""
-"\n"
-"        Register your email and password via the application \"Settings > Account > Email Account\"\n"
-"\n"
-"      "
+msgid "Register your email and password via the application \"Settings > Account > Email Account\""
 msgstr ""
 
-msgid ""
-"\n"
-"        Create a new business account Line (With Messaging API enabled)\n"
-"\n"
-"      "
+msgid "Create a new business account Line (With Messaging API enabled)"
 msgstr ""
 
-msgid ""
-"\n"
-"            In <a href=\"https://business.line.me/en/\">LINE Business Center</a>, select \"Messaging API\" in the \"Services\"\n"
-"\n"
-"          "
+msgid "In <a href=\"https://business.line.me/en/\">LINE Business Center</a>, select \"Messaging API\" in the \"Services\""
 msgstr ""
 
-msgid ""
-"\n"
-"            Select \"Start using Messaging API\"\n"
-"\n"
-"          "
+msgid "Select \"Start using Messaging API\""
 msgstr ""
 
-msgid ""
-"\n"
-"            Enter your credentials created through the application and wait for the confirmation code in it.\n"
-"\n"
-"          "
+msgid "Enter your credentials created through the application and wait for the confirmation code in it."
 msgstr ""
 
-msgid ""
-"\n"
-"                Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested.\n"
-"\n"
-"              "
+msgid "Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested."
 msgstr ""
 
-msgid ""
-"\n"
-"            After the creation process of the LINE business account, you will see the page to add a new channel of communication \"Messaging API.\" Enter the name and select the appropriate category and click OK.\n"
-"\n"
-"          "
+msgid "After the creation process of the LINE business account, you will see the page to add a new channel of communication \"Messaging API.\" Enter the name and select the appropriate category and click OK."
 msgstr ""
 
-msgid ""
-"\n"
-"            In the next step, click the \"LINE @ Manager\" and it will redirect you to the API activation page.\n"
-"\n"
-"          "
+msgid "In the next step, click the \"LINE @ Manager\" and it will redirect you to the API activation page."
 msgstr ""
 
-msgid ""
-"\n"
-"            Click \"Enable API\" and confirm. (By doing so, the status of your API will be \"Valid\")\n"
-"\n"
-"          "
+msgid "Click \"Enable API\" and confirm. (By doing so, the status of your API will be \"Valid\")"
 msgstr ""
 
-msgid ""
-"\n"
-"            Enable the option to allow the use of Webhooks and click \"Save.\"\n"
-"\n"
-"          "
+msgid "Enable the option to allow the use of Webhooks and click \"Save.\""
 msgstr ""
 
-msgid ""
-"\n"
-"        Set your bot:\n"
-"\n"
-"      "
+msgid "Set your bot:"
 msgstr ""
 
-msgid ""
-"\n"
-"            Click on the menu \"Accounts\" at the top of the page at the link <a href=\"https://business.line.me\">https://business.line.me</a>\n"
-"\n"
-"          "
+msgid "Click on the menu \"Accounts\" at the top of the page at the link <a href=\"https://business.line.me\">https://business.line.me</a>"
 msgstr ""
 
-msgid ""
-"\n"
-"            In the communication channel of your choice, click on the \"LINE Developers\" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token).\n"
-"\n"
-"          "
+msgid "In the communication channel of your choice, click on the \"LINE Developers\" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token)."
 msgstr ""
 
-msgid ""
-"\n"
-"              Note: To generate the Channel Access Token click on \"Issue\" button\n"
-"\n"
-"            "
+msgid "Note: To generate the Channel Access Token click on \"Issue\" button"
 msgstr ""
 
-msgid ""
-"\n"
-"      To finish the configuration of Line channel you'll need to set the following callback URL in the Line Bot settings page, following the steps below:\n"
-"\n"
-"    "
+msgid "To finish the configuration of Line channel you'll need to set the following callback URL in the Line Bot settings page, following the steps below:"
 msgstr ""
 
 msgid "Step One"
@@ -4938,88 +4825,40 @@ msgstr ""
 
 msgid ""
 "\n"
-"        Configure \"Callback URL\" in the channel page (the same page which get the information Channel Secret and Channel Access Token) by clicking on the \"Edit\" button, filling the field \"webhook URL\" and pressing on the \"Save\" button.\n"
+"    Configure \"Callback URL\" in the channel page (the same page which get the information Channel Secret and Channel Access Token) by clicking on the \"Edit\" button, filling the field \"webhook URL\" and pressing on the \"Save\" button.\n"
 "\n"
-"      "
+"  "
 msgstr ""
 
 msgid "Step Two"
 msgstr ""
 
-msgid ""
-"\n"
-"        Fill the IP addresses in the \"Server IP Whitelist\" with the list of addresses displayed below.\n"
-"\n"
-"      "
+msgid "Fill the IP addresses in the \"Server IP Whitelist\" with the list of addresses displayed below."
 msgstr ""
 
-msgid ""
-"\n"
-"    You can connect your number by entering your credentials here.\n"
-"  "
+msgid "To finish configuring your Novo connection you'll need to set the following callback URLs on your Novo account."
 msgstr ""
 
-msgid ""
-"\n"
-"  To finish configuring your Novo connection you'll need to set the following callback URLs on your\n"
-"  Novo account.\n"
-"\n"
-"\n"
+msgid "When a new message is received by your service, it should notify us with a POST to the following URL, passing the following parameters: 'from' and 'text'."
 msgstr ""
 
-msgid ""
-"\n"
-"      When a new message is received by your service, it should notify us with a POST to the following URL, passing\n"
-"      the following parameters: 'from' and 'text'.\n"
-"\n"
-"    "
-msgstr ""
-
-msgid ""
-"\n"
-"      Use this Token as Authorization when sending incoming messages\n"
-"    "
+msgid "Use this Token as Authorization when sending incoming messages"
 msgstr ""
 
 #, python-format
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://core.telegram.org/bots\">Telegram Bot</a> to your %(name)s workspace\n"
-"    to automate sending and receiving Telegram messages.\n"
-"\n"
-"  "
+msgid "You can connect a <a href=\"https://core.telegram.org/bots\">Telegram Bot</a> to your %(name)s workspace to automate sending and receiving Telegram messages."
 msgstr ""
 
-msgid ""
-"\n"
-"    You will need to <a href=\"https://core.telegram.org/bots#create-a-new-bot\">create a new Telegram bot</a> and\n"
-"    get its Authentication Token. To do so:\n"
-"\n"
-"  "
+msgid "You will need to <a href=\"https://core.telegram.org/bots#create-a-new-bot\">create a new Telegram bot</a> and get its Authentication Token. To do so:"
 msgstr ""
 
-msgid ""
-"\n"
-"        Start a new chat with the <a href=\"https://telegram.me/botfather\">BotFather</a>. You can do so on your\n"
-"        device by searching for \"botfather\" and starting a new chat.</li>\n"
-"\n"
-"      "
+msgid "Start a new chat with the <a href=\"https://telegram.me/botfather\">BotFather</a>. You can do so on your device by searching for \"botfather\" and starting a new chat.</li>"
 msgstr ""
 
-msgid ""
-"\n"
-"        In your @botfather chat, type in the command <code>/newbot</code>. Follow the instructions to name your bot and\n"
-"        choose a username for it.\n"
-"\n"
-"      "
+msgid "In your @botfather chat, type in the command <code>/newbot</code>. Follow the instructions to name your bot and choose a username for it."
 msgstr ""
 
-msgid ""
-"\n"
-"        Once you have created your bot, @botfather will provide you with the authentication token to use your bot.\n"
-"        Enter that token below.\n"
-"\n"
-"      "
+msgid "Once you have created your bot, @botfather will provide you with the authentication token to use your bot. Enter that token below."
 msgstr ""
 
 msgid ""
