--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-28 20:57+0000\n"
+"POT-Creation-Date: 2020-10-29 15:35+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -6359,15 +6359,7 @@ msgstr ""
 #| "        to your number will be charged according to their plan.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"      It may take up to ten minutes for a new webhook to take effect after being set on your Facebook application. Remember,\n"
-"      until your Facebook application is approved by Facebook you will only be able to send and receive messages\n"
-"      with administrators of your application.\n"
-"\n"
-"\n"
-"\n"
-"    "
+msgid "It may take up to ten minutes for a new webhook to take effect after being set on your Facebook application. Remember, until your Facebook application is approved by Facebook you will only be able to send and receive messages with administrators of your application."
 msgstr ""
 "\n"
 "Assim que você solicitar um número, você imediatamente será capaz de enviar e receber mensagens. Os usuários que enviarem mensagens ao seu número serão cobrados de acordo com os planos deles. "
@@ -6468,23 +6460,13 @@ msgstr ""
 #| "        here.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"    You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password\n"
-"    here.\n"
-"\n"
-"  "
+msgid "You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password here."
 msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
 #, fuzzy, python-format
-msgid ""
-"\n"
-"      After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want\n"
-"      to push a message to %(brand)s.\n"
-"\n"
-"    "
+msgid "After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want to push a message to %(brand)s."
 msgstr ""
 "\n"
 "Após a conexão com o seu serviço, iremos fornecer URLs para os terminais para o InfoBip chamar quando queiser enviar uma mensagem para Textit."
@@ -6496,33 +6478,18 @@ msgstr ""
 #| "        here.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://jiochat.com\">JioChat Channel</a> to your %(name)s workspace\n"
-"    to automate sending and receiving JioChat messages.\n"
-"  "
+msgid "You can connect a <a href=\"https://jiochat.com\">JioChat Channel</a> to your %(name)s workspace to automate sending and receiving JioChat messages."
 msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
-msgid ""
-"\n"
-"      To start copy the App ID and App Secret from the Developer Center into the form below and click Submit.\n"
-"    "
+msgid "To start copy the App ID and App Secret from the Developer Center into the form below and click Submit."
 msgstr ""
 
-msgid ""
-"\n"
-"    After entering your endpoint URL below, we'll provide you with the configuration details for your Kannel configuration file.\n"
-"  "
+msgid "After entering your endpoint URL below, we'll provide you with the configuration details for your Kannel configuration file."
 msgstr ""
 
-msgid ""
-"\n"
-"    As a last step you'll need to configure Kannel to send and receive messages. Here is a stanza you\n"
-"    can add to your Kannel configuration to enable sending and receiving.\n"
-"\n"
-"  "
+msgid "As a last step you'll need to configure Kannel to send and receive messages. Here is a stanza you can add to your Kannel configuration to enable sending and receiving."
 msgstr ""
 
 msgid "Make sure to change the forced-smsc and default-smsc values to the appropriate values for your configuration."
@@ -6535,27 +6502,15 @@ msgstr ""
 #| "        here.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://developers.line.me/messaging-api/overview\">LINE Bot</a> to your %(name)s workspace\n"
-"    to automate sending and receiving LINE messages.\n"
-"  "
+msgid "You can connect a <a href=\"https://developers.line.me/messaging-api/overview\">LINE Bot</a> to your %(name)s workspace to automate sending and receiving LINE messages."
 msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
-msgid ""
-"\n"
-"    To start creating a LINE bot, go to <a href=\"https://developers.line.me/messaging-api/getting-started\">Getting started with the Messaging API</a>.\n"
-"\n"
-"  "
+msgid "To start creating a LINE bot, go to <a href=\"https://developers.line.me/messaging-api/getting-started\">Getting started with the Messaging API</a>."
 msgstr ""
 
-msgid ""
-"\n"
-"        Access the <a href=\"https://developers.line.me/channels/\">LINE Channels</a> page and add a new Channel.</li>\n"
-"\n"
-"      "
+msgid "Access the <a href=\"https://developers.line.me/channels/\">LINE Channels</a> page and add a new Channel.</li>"
 msgstr ""
 
 #, fuzzy
@@ -6564,11 +6519,7 @@ msgstr ""
 #| "            Of course, just contact us and we can put together a package to suit your needs.\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"        Create a Line account using the application on your smartphone\n"
-"\n"
-"      "
+msgid "Create a Line account using the application on your smartphone"
 msgstr ""
 "\n"
 "Claro, basta contactar-nos e podemos montar um pacote para atender às suas necessidades. "
@@ -6579,11 +6530,7 @@ msgstr ""
 #| "            Of course, just contact us and we can put together a package to suit your needs.\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"        Activate the permission to login via web application in the \"Settings > Account > Allow login\"\n"
-"\n"
-"      "
+msgid "Activate the permission to login via web application in the \"Settings > Account > Allow login\""
 msgstr ""
 "\n"
 "Claro, basta contactar-nos e podemos montar um pacote para atender às suas necessidades. "
@@ -6594,11 +6541,7 @@ msgstr ""
 #| "            Of course, just contact us and we can put together a package to suit your needs.\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"        Register your email and password via the application \"Settings > Account > Email Account\"\n"
-"\n"
-"      "
+msgid "Register your email and password via the application \"Settings > Account > Email Account\""
 msgstr ""
 "\n"
 "Claro, basta contactar-nos e podemos montar um pacote para atender às suas necessidades. "
@@ -6609,111 +6552,58 @@ msgstr ""
 #| "            Of course, just contact us and we can put together a package to suit your needs.\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"        Create a new business account Line (With Messaging API enabled)\n"
-"\n"
-"      "
+msgid "Create a new business account Line (With Messaging API enabled)"
 msgstr ""
 "\n"
 "Claro, basta contactar-nos e podemos montar um pacote para atender às suas necessidades. "
 
-msgid ""
-"\n"
-"            In <a href=\"https://business.line.me/en/\">LINE Business Center</a>, select \"Messaging API\" in the \"Services\"\n"
-"\n"
-"          "
+msgid "In <a href=\"https://business.line.me/en/\">LINE Business Center</a>, select \"Messaging API\" in the \"Services\""
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"            Select \"Start using Messaging API\"\n"
-"\n"
-"          "
+msgid "Select \"Start using Messaging API\""
 msgstr ""
 "\n"
 "%(sms_sent)s Enviadas"
 
 #, fuzzy
-msgid ""
-"\n"
-"            Enter your credentials created through the application and wait for the confirmation code in it.\n"
-"\n"
-"          "
+msgid "Enter your credentials created through the application and wait for the confirmation code in it."
 msgstr "O nome deste contato"
 
-msgid ""
-"\n"
-"                Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested.\n"
-"\n"
-"              "
+msgid "Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested."
 msgstr ""
 
-msgid ""
-"\n"
-"            After the creation process of the LINE business account, you will see the page to add a new channel of communication \"Messaging API.\" Enter the name and select the appropriate category and click OK.\n"
-"\n"
-"          "
+msgid "After the creation process of the LINE business account, you will see the page to add a new channel of communication \"Messaging API.\" Enter the name and select the appropriate category and click OK."
 msgstr ""
 
-msgid ""
-"\n"
-"            In the next step, click the \"LINE @ Manager\" and it will redirect you to the API activation page.\n"
-"\n"
-"          "
+msgid "In the next step, click the \"LINE @ Manager\" and it will redirect you to the API activation page."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"            Click \"Enable API\" and confirm. (By doing so, the status of your API will be \"Valid\")\n"
-"\n"
-"          "
+msgid "Click \"Enable API\" and confirm. (By doing so, the status of your API will be \"Valid\")"
 msgstr ""
 "\n"
 "%(sms_sent)s Enviadas"
 
 #, fuzzy
-msgid ""
-"\n"
-"            Enable the option to allow the use of Webhooks and click \"Save.\"\n"
-"\n"
-"          "
+msgid "Enable the option to allow the use of Webhooks and click \"Save.\""
 msgstr ""
 "\n"
 "%(sms_sent)s Enviadas"
 
 #, fuzzy
-msgid ""
-"\n"
-"        Set your bot:\n"
-"\n"
-"      "
-msgstr ""
-"\n"
-"Instalar o %(name)s app"
+#| msgid "The name of your organization"
+msgid "Set your bot:"
+msgstr "Nome da sua organização"
 
-msgid ""
-"\n"
-"            Click on the menu \"Accounts\" at the top of the page at the link <a href=\"https://business.line.me\">https://business.line.me</a>\n"
-"\n"
-"          "
+msgid "Click on the menu \"Accounts\" at the top of the page at the link <a href=\"https://business.line.me\">https://business.line.me</a>"
 msgstr ""
 
-msgid ""
-"\n"
-"            In the communication channel of your choice, click on the \"LINE Developers\" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token).\n"
-"\n"
-"          "
+msgid "In the communication channel of your choice, click on the \"LINE Developers\" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token)."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"              Note: To generate the Channel Access Token click on \"Issue\" button\n"
-"\n"
-"            "
+msgid "Note: To generate the Channel Access Token click on \"Issue\" button"
 msgstr ""
 "\n"
 "Na página do aplicativo Textit, toque no botão \"Instalar\"."
@@ -6724,11 +6614,7 @@ msgstr ""
 #| "        To finish configuring your connection you'll need to set the following callback URLs on your service or aggregator.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"      To finish the configuration of Line channel you'll need to set the following callback URL in the Line Bot settings page, following the steps below:\n"
-"\n"
-"    "
+msgid "To finish the configuration of Line channel you'll need to set the following callback URL in the Line Bot settings page, following the steps below:"
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
@@ -6738,61 +6624,29 @@ msgstr ""
 
 msgid ""
 "\n"
-"        Configure \"Callback URL\" in the channel page (the same page which get the information Channel Secret and Channel Access Token) by clicking on the \"Edit\" button, filling the field \"webhook URL\" and pressing on the \"Save\" button.\n"
+"    Configure \"Callback URL\" in the channel page (the same page which get the information Channel Secret and Channel Access Token) by clicking on the \"Edit\" button, filling the field \"webhook URL\" and pressing on the \"Save\" button.\n"
 "\n"
-"      "
+"  "
 msgstr ""
 
 msgid "Step Two"
 msgstr ""
 
-msgid ""
-"\n"
-"        Fill the IP addresses in the \"Server IP Whitelist\" with the list of addresses displayed below.\n"
-"\n"
-"      "
+msgid "Fill the IP addresses in the \"Server IP Whitelist\" with the list of addresses displayed below."
 msgstr ""
-
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "        You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password\n"
-#| "        here.\n"
-#| "\n"
-#| "      "
-msgid ""
-"\n"
-"    You can connect your number by entering your credentials here.\n"
-"  "
-msgstr ""
-"\n"
-"Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
 #, fuzzy
 #| msgid "To finish configuring your Zenvia connection you'll need to set the following callback URLs on your Zenvia account."
-msgid ""
-"\n"
-"  To finish configuring your Novo connection you'll need to set the following callback URLs on your\n"
-"  Novo account.\n"
-"\n"
-"\n"
+msgid "To finish configuring your Novo connection you'll need to set the following callback URLs on your Novo account."
 msgstr "Para finalizar a configuração de sua conexão com a Take.net você precisa definir as seguintes URLs de retorno de chamada em sua conta Take.net."
 
 #, fuzzy
-msgid ""
-"\n"
-"      When a new message is received by your service, it should notify us with a POST to the following URL, passing\n"
-"      the following parameters: 'from' and 'text'.\n"
-"\n"
-"    "
+msgid "When a new message is received by your service, it should notify us with a POST to the following URL, passing the following parameters: 'from' and 'text'."
 msgstr ""
 "\n"
 "Quando uma nova mensagem é recebida pelo seu serviço, o Textit deve ser notificado com um POST para a URL a seguir, passando os seguintes parâmetros: 'de' e 'texto'"
 
-msgid ""
-"\n"
-"      Use this Token as Authorization when sending incoming messages\n"
-"    "
+msgid "Use this Token as Authorization when sending incoming messages"
 msgstr ""
 
 #, fuzzy, python-format
@@ -6802,38 +6656,18 @@ msgstr ""
 #| "        here.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"    You can connect a <a href=\"https://core.telegram.org/bots\">Telegram Bot</a> to your %(name)s workspace\n"
-"    to automate sending and receiving Telegram messages.\n"
-"\n"
-"  "
+msgid "You can connect a <a href=\"https://core.telegram.org/bots\">Telegram Bot</a> to your %(name)s workspace to automate sending and receiving Telegram messages."
 msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
-msgid ""
-"\n"
-"    You will need to <a href=\"https://core.telegram.org/bots#create-a-new-bot\">create a new Telegram bot</a> and\n"
-"    get its Authentication Token. To do so:\n"
-"\n"
-"  "
+msgid "You will need to <a href=\"https://core.telegram.org/bots#create-a-new-bot\">create a new Telegram bot</a> and get its Authentication Token. To do so:"
 msgstr ""
 
-msgid ""
-"\n"
-"        Start a new chat with the <a href=\"https://telegram.me/botfather\">BotFather</a>. You can do so on your\n"
-"        device by searching for \"botfather\" and starting a new chat.</li>\n"
-"\n"
-"      "
+msgid "Start a new chat with the <a href=\"https://telegram.me/botfather\">BotFather</a>. You can do so on your device by searching for \"botfather\" and starting a new chat.</li>"
 msgstr ""
 
-msgid ""
-"\n"
-"        In your @botfather chat, type in the command <code>/newbot</code>. Follow the instructions to name your bot and\n"
-"        choose a username for it.\n"
-"\n"
-"      "
+msgid "In your @botfather chat, type in the command <code>/newbot</code>. Follow the instructions to name your bot and choose a username for it."
 msgstr ""
 
 #, fuzzy
@@ -6844,12 +6678,7 @@ msgstr ""
 #| "\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"        Once you have created your bot, @botfather will provide you with the authentication token to use your bot.\n"
-"        Enter that token below.\n"
-"\n"
-"      "
+msgid "Once you have created your bot, @botfather will provide you with the authentication token to use your bot. Enter that token below."
 msgstr ""
 "\n"
 "Se você tiver um provedor externo que você deseja usar para enviar mensagens, você pode conectá-lo \n"
@@ -10605,6 +10434,42 @@ msgstr "Insira o seu código de requisição"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr ""
+
+#, fuzzy, python-format
+#~ msgid ""
+#~ "\n"
+#~ "      After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want\n"
+#~ "      to push a message to %(brand)s.\n"
+#~ "\n"
+#~ "    "
+#~ msgstr ""
+#~ "\n"
+#~ "Após a conexão com o seu serviço, iremos fornecer URLs para os terminais para o InfoBip chamar quando queiser enviar uma mensagem para Textit."
+
+#, fuzzy
+#~ msgid ""
+#~ "\n"
+#~ "        Set your bot:\n"
+#~ "\n"
+#~ "      "
+#~ msgstr ""
+#~ "\n"
+#~ "Instalar o %(name)s app"
+
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "        You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password\n"
+#~| "        here.\n"
+#~| "\n"
+#~| "      "
+#~ msgid ""
+#~ "\n"
+#~ "    You can connect your number by entering your credentials here.\n"
+#~ "  "
+#~ msgstr ""
+#~ "\n"
+#~ "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
 #, fuzzy
 #~ msgid "Field:Team"
